Fixed spacing on headings for mobile width.

--- a/wp-content/themes/canadianadventureco/sass/_content.scss
+++ b/wp-content/themes/canadianadventureco/sass/_content.scss
@@ -329,7 +329,12 @@
 		padding-top: 138px;
 	}
 }
-
+.mobile-width {
+	width: 85%;
+	@include desktop {
+		width:100%;
+	}
+}
 .spacing {
 	margin-top:5rem;
 }
